<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--tools:context="info.androidhive.materialdesign.activity.LoginActivity">-->



    <info.androidhive.materialdesign.helper.MyViewPager
        android:id="@+id/viewPagerVertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:id="@+id/layout_sms"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="100dp"
                android:src="@drawable/splash_icon" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:inputType="textCapWords"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:gravity="center_horizontal"
                android:inputType="textCapWords"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="Quick Register to Start"
                android:textColor="@android:color/white"
                android:textSize="14dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="20dp">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_login_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="15dp">

                    <EditText
                        android:id="@+id/login_email"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:hint="Email Address"
                        android:inputType="textEmailAddress"
                        android:padding="5dp"
                        android:textSize="18dp" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_login_email2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">

                    <EditText
                        android:id="@+id/login_email2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="Confirm Email Address"
                        android:inputType="textEmailAddress"
                        android:paddingBottom="5dp" />
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/btn_request_next"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/lbl_next"
                    android:textColor="@android:color/white"
                    android:textSize="14dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_otp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="100dp"
                android:src="@drawable/splash_icon" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/otp_waiting"
                android:textColor="@android:color/white"
                android:textSize="16dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:gravity="center_horizontal"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/otp_enter"
                android:textColor="@android:color/white"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/input_otp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:hint="@string/lbl_enter_otp"
                android:inputType="number"
                android:maxLength="5"
                android:padding="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textCursorDrawable="@null"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/resend_otp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Resend Code?"
                android:textColor="@color/colorBackgroundTextField"
                android:textSize="12dp"
                android:layout_margin="10dp"
                />


        </LinearLayout>

    </info.androidhive.materialdesign.helper.MyViewPager>


    <include layout="@layout/progress_bar"/>


</RelativeLayout>